--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,6 +46,11 @@ a {
     text-decoration: none;
 }
 
+a:hover {
+    color: #d9dcd6;
+    text-decoration: underline;
+}
+
 p {
     font-size: 16px;
 }
